--- a/VisualStudio/Swap2.vcxproj.filters
+++ b/VisualStudio/Swap2.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="..\include\swap\tokenizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\swap\thread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
