--- a/VisualStudio/SwapNative/SwapNative.vcxproj.filters
+++ b/VisualStudio/SwapNative/SwapNative.vcxproj.filters
@@ -30,6 +30,15 @@
     <ClCompile Include="..\..\src\socket.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\native.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\operator.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\thread.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\swap\SwapNative.h">
